image space added

--- a/src/main/resources/categories.html
+++ b/src/main/resources/categories.html
@@ -27,7 +27,9 @@
         <section class="categories">
             <ul>
                 
-                <li>Beaches</li>
+                <li>Beaches
+                    <img src="" alt="">
+                </li>
                 <li>Mountains</li>
                 <li>Cities</li>
                 <li>International</li>
